Address bugs found by FindBugs http://codereview.appspot.com/63059